# Ollama-Emulator-Desktop-Ultimate

./: .env.production  .gitignore  .release-please-manifest.json  CHANGELOG.md  EXECUTION_GUIDE.md  HANDOFF.md  MOBILE.md  README.md  SECURITY.md  acl.py  build_exe.bat  claude-code-env.bat  claude-code-env.sh  cli.py  db.py  docker-compose.yml  license_generator.py  memory.py  ollama_emu_desktop.py  opencode.example.json  package.json  pyproject.toml  rag.py  release-please-config.json  requirements.txt  run.bat  run.sh  setup_env.py  test.py  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-review.yml  codeql.yml  deploy-pages.yml  docker.yml  lighthouse.yml  lint.yml  preview.yml  publish-npm.yml  release-please.yml  release.yml  set-package-public.yml  test.yml
backend/scripts/: build_exe.bat  claude-code-env.bat  claude-code-env.sh  make_icons.py  ollamaemu.bat  ollamaemu.sh  run.bat  run.sh
backend/tests/: test_api.py
cloudflare/: README.md  config.yml  setup.sh
configs/: .env.example  .npmrc  setup_database.sql
deploy/: README.md
desktop/: README.md  build.py  build.sh  build.spec  fetch_postgres.py  requirements.txt
desktop/src/: api_client.py  launcher.py  qml_engine.py  updater.py
docs/: API.md  MOBILE.md
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  prisma.config.ts  vercel.json
frontend/prisma/: schema.prisma
frontend/public/: CNAME  _github-pages-challenge-rbkhan007  manifest.webmanifest
mobile/: BUILD.md  app.json  eas.json  gen-assets.js  package-lock.json  package.json
promotion/: email-campaign.md  launch-checklist.md  product-hunt.md  reddit-posts.md  twitter-thread.md
resources/: CV_Rakibul_Hasan.md
(+125 files in other folders)
