[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-emu"
version = "1.0.2"
description = "Stop paying $20/mo for Claude & ChatGPT. Get 26 free models on one port."
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Rhasan@dev", email = "rbkhan00009@gmail.com"},
]
keywords = ["llm", "ollama", "openrouter", "free", "ai", "proxy", "rag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
sentence-transformers = [
    "sentence-transformers>=2.0.0",
]

[project.scripts]
ollamaemu = "ollama_emu.cli:main"

[project.urls]
Homepage = "https://github.com/rbkhan007/Ollama-Emulator-Desktop-Ultimate"
Repository = "https://github.com/rbkhan007/Ollama-Emulator-Desktop-Ultimate"
Issues = "https://github.com/rbkhan007/Ollama-Emulator-Desktop-Ultimate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
